# funny_leetcode

./: .gitignore  LICENSE  README.md  code_counter.py
CPP/: CMakeLists.txt  CodeFormat.py  NO453.cc  NO788.cc  No1.cpp  No10.cc  No100.cc  No100.cpp  No1005.cc  No101.cpp  No102.cpp  No1024.cc  No103.cpp  No1030.cc  No1034.cc  No104.cpp  No1046.cc  No105.cpp  No106.cpp  No107.cc  No107.cpp  No1078.cc  No108.cc  No108.cpp  No109.cpp  No110.cc  No111.cc  No112.cc  No1122.cc  No113.cpp  No114.cc  No114.cpp  No1143.cc  No115.cpp  No116.cpp  No117.cc  No118.cpp  No119.cc  No120.cc  No1207.cc  (+588 more)
CPP/2020-fall/: No1.cpp
CPP/NOWCODER/: CMakeLists.txt  nc_140.cc  nc_88.cc  nc_93.cc
CPP/NOWCODER/tencent2021/: CMakeLists.txt  QuickSortDemo.cc  input.txt  maxLengthSubstring.cc  mod7.cc  tencent2021_1.cc
CPP/acm-intro/: CMakeLists.txt
CPP/acm-intro/chapter-5/: CMakeLists.txt  UVa136.cc  priority-queue-test.cc
CPP/biweekly-contest-33/: No1.cc  No2.cpp  No3.cc  No4.cc
CPP/biweekly-contest-35/: No1.cpp
CPP/biweekly-contest-36/: No1.cpp
CPP/biweekly-contest-37/: No1.cc
CPP/biweekly-contest-38/: No1.cc  No2.cc  No3.cc
CPP/biweekly-contest-39/: No1.cc  No2.cc
CPP/biweekly-contest-40/: No1.cc  No2.cc
CPP/biweekly-contest-41/: No1.cc  No2.cc
CPP/biweekly-contest-42/: No1.cc
CPP/examination/: CMakeLists.txt
CPP/examination/alibaba/: CMakeLists.txt  alibaba2021_1.cc  alibaba2021_2.cc  alibaba2022_1.cc  alibaba2022_2.cc  alibaba2022_3.cc  input.txt  input1.txt  input2.txt
CPP/examination/baidu/: Baidu_1.cc  Baidu_2.cc  Baidu_3.cc  CMakeLists.txt  input1.txt  input2.txt
CPP/examination/bytedance/: CMakeLists.txt  bytedance1.cc  bytedance3.cc
CPP/examination/huatai/: CMakeLists.txt  huatai_1.cc  huatai_2.cc  huatai_3.cc
CPP/examination/huawei/: 2022040601.cc  CMakeLists.txt  input.txt
CPP/examination/meituan/: CMakeLists.txt  Test1.cc  Test2.cc  Test3.cc  meituan1.cc  meituan2.cc  meituan3.cc  meituan4.cc  meituan5.cc
CPP/examination/netcase/: CMakeLists.txt  netcase1.cc  netcase2.cc
CPP/examination/tencent/: CMakeLists.txt  input1.txt  input2.txt  input3.txt  input5.txt  tencent_1.cc  tencent_2.cc  tencent_3.cc  tencent_4.cc  tencent_5.cc
CPP/examination/tencentMusic/: CMakeLists.txt  tencentMusic1.cc  tencentMusic2.cc  tencentMusic3.cc
CPP/hot100/: CMakeLists.txt  Hot1.cc  Hot101.cc  Hot102.cc  Hot104.cc  Hot105.cc  Hot11.cc  Hot114.cc  Hot121.cc  Hot124.cc  Hot128.cc  Hot136.cc  Hot139.cc  Hot141.cc  Hot142.cc  Hot146.cc  Hot148.cc  Hot15.cc  Hot152.cc  Hot155.cc  Hot160.cc  Hot169.cc  Hot17.cc  Hot19.cc  Hot198.cc  Hot2.cc  Hot20.cc  Hot200.cc  Hot206.cc  Hot207.cc  Hot208.cc  Hot21.cc  Hot215.cc  Hot22.cc  Hot221.cc  Hot226.cc  Hot23.cc  Hot234.cc  Hot236.cc  Hot238.cc  (+58 more)
CPP/interesting-problems/: CMakeLists.txt  CXXSmartPointer2.cc  CXXStandLibarySharedPointer.cc  CastType.cc  Clause33.cc  CopyConstruct.cc  L3VirtualDevice.cc  Q04.cc  VirtualFunctionExperiment.cc
CPP/interview-book/: CMakeLists.txt  No0801.cc  No1624.cc  No1705.cc  No1707.cc  No1708.cc
CPP/lccup20/: No1.cpp  No2.cpp  No3.cpp
CPP/lccup2021/: No1.cc  No3.cc
CPP/lccup2022/: CMakeLists.txt  lccup2022_1.cc  lccup2022_2.cc  lccup2022_3.cc
CPP/offer/: CMakeLists.txt  No03.cc  No04.cc  No05.cc  No06.cc  No07.cc  No09.cc  No10.cc  No11.cc  No12.cc  No13.cc  No14_1.cc  No14_2.cc  No15.cc  No16.cc  No17.cc  No18.cc  No21.cc  No24.cc  No26.cc  No27.cc  Offer19.cc  Offer22.cc  Offer26.cc  Offer28.cc  Offer29.cc  Offer30.cc  Offer31.cc  Offer32_1.cc  Offer32_2.cc  Offer32_3.cc  Offer33.cc  Offer34.cc  Offer35.cc  Offer36.cc  Offer38.cc  Offer39.cc  Offer40.cc  Offer41.cc  Offer44.cc  (+26 more)
CPP/offer/tutorial/: CMakeLists.txt  Chapter2.cc
CPP/offer2/: CMakeLists.txt  Offer2_1.cc  Offer2_100.cc  Offer2_101.cc  Offer2_102.cc  Offer2_103.cc  Offer2_104.cc  Offer2_105.cc  Offer2_106.cc  Offer2_108.cc  Offer2_109.cc  Offer2_11.cc  Offer2_110.cc  Offer2_111.cc  Offer2_112.cc  Offer2_113.cc  Offer2_116.cc  Offer2_117.cc  Offer2_118.cc  Offer2_119.cc  Offer2_12.cc  Offer2_13.cc  Offer2_14.cc  Offer2_15.cc  Offer2_16.cc  Offer2_19.cc  Offer2_2.cc  Offer2_20.cc  Offer2_21.cc  Offer2_22.cc  Offer2_25.cc  Offer2_26.cc  Offer2_27.cc  Offer2_28.cc  Offer2_29.cc  Offer2_30.cc  Offer2_33.cc  Offer2_34.cc  Offer2_37.cc  Offer2_38.cc  (+57 more)
CPP/saikr/: CMakeLists.txt  NoA.cc  NoC.cc  NoH.cc
CPP/weekly-Contest-263/: No1.cc  No2.cc
CPP/weekly-contest-198/: No1.cpp
CPP/weekly-contest-203/: No1.cpp
CPP/weekly-contest-204/: No1.cc  No1.cpp  No2.cc  No2.cpp
CPP/weekly-contest-206/: No1.cpp
CPP/weekly-contest-207/: No1.cc
CPP/weekly-contest-209/: No1.cpp  No2.cc
CPP/weekly-contest-210/: No1.cc  No2.cc  No3.cc
CPP/weekly-contest-211/: No1.cc  No2.cc
CPP/weekly-contest-212/: No1.cc  No2.cc  No3.cc
CPP/weekly-contest-213/: No1.cc  No2.cc
CPP/weekly-contest-215/: No1.cc  No2.cc
CPP/weekly-contest-217/: No1.cc  No2.cc
CPP/weekly-contest-218/: No1.cc  No2.cc  No3.cc  No4.cc
CPP/weekly-contest-219/: No1.cc  No2.cc  No3.cc
CPP/weekly-contest-220/: No1.cc  No2.cc  No3.cc
CPP/weekly-contest-221/: No1.cc  No2.cc  No3.cc
CPP/weekly-contest-272/: No1.cc  No2.cc  No3.cc
Java/ACMModule/src/: Main.java
Java/LEETCODE_CUP/: pom.xml
Java/LUOGU/src/: P1000.java  P1001.java  P1002.java  P1003.java  P1007.java  P1008.java  P1010.java  P1014.java  P1024.java
Java/MEITUAN/src/: No001.java  No002.java  No003.java  (+1 more)
Java/src/: MaxPQ.java  No10.java  No1003.java  No1004.java  No1006.java  No1008.java  No1014.java  No1016.java  No1019.java  No1021.java  No1022.java  No1023.java  No1025.java  No1028.java  No1035.java  No1038.java  No1040.java  No1047.java  No1051.java  No1060.java  No1078.java  No1081.java  No1091.java  No1093.java  No1103.java  No1105.java  No1106.java  No1108.java  No1109.java  No1124.java  No1128.java  No1130.java  No1137.java  No1138.java  No1143.java  No115.java  No1155.java  No1160.java  No1169.java  No118.java  (+377 more)
Python/: CodeFormat.py  No10.py  No11.py  No12.py  No14.py  No15.py  No16.py  No17.py  No18.py  No19.py  No20.py  No21.py  No22.py  No23.py  No3.py  No5.py  No6.py  No8.py
(+255 files in other folders)
