cmake_minimum_required(VERSION 3.16)
project(CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPP main.cpp complex_node.h)
add_executable(No1 No1.cpp)
add_executable(No2 No2.cpp)
add_executable(No7 No7.cpp)
add_executable(No9 No9.cpp)

add_executable(No23 No23.cpp)
add_executable(No24 No24.cpp)
add_executable(No25 No25.cpp)
add_executable(No26 No26.cpp)
add_executable(No27 No27.cpp)
add_executable(No28 No28.cpp)

add_executable(No29 No29.cpp)
add_executable(No31 No31.cpp)
add_executable(No32 No32.cpp)
add_executable(No33 No33.cpp)
add_executable(No34 No34.cpp)
add_executable(No35 No35.cpp)

add_executable(No36 No36.cpp)

add_executable(No37 No37.cpp)
add_executable(No38 No38.cpp)

add_executable(No39 No39.cpp)
add_executable(No40 No40.cpp)
add_executable(No41 No41.cpp)
add_executable(No42 No42.cpp)
add_executable(No43 No43.cpp)

add_executable(No44 No44.cpp)
add_executable(No45 No45.cpp)
add_executable(No46 No46.cpp)

add_executable(No47 No47.cpp)
add_executable(No48 No48.cpp)

add_executable(weekly-contest-198-No1 weekly-contest-198/No1.cpp)

add_executable(No49 No49.cpp)
add_executable(No50 No50.cpp)
add_executable(No53 No53.cpp)
add_executable(No54 No54.cpp)

add_executable(No55 No55.cpp)
add_executable(No56 No56.cpp)
add_executable(No57 No57.cpp)
add_executable(No58 No58.cpp)
add_executable(No59 No59.cpp)
add_executable(No60 No60.cpp)

add_executable(No61 No61.cpp)
add_executable(No62 No62.cpp)
add_executable(No63 No63.cpp)
add_executable(No64 No64.cpp)
add_executable(No65 No65.cpp)
add_executable(No66 No66.cpp)

add_executable(No67 No67.cpp)
add_executable(No68 No68.cpp)
add_executable(No69 No69.cpp)
add_executable(No70 No70.cpp)
add_executable(No71 No71.cpp)
add_executable(No72 No72.cpp)

add_executable(No73 No73.cpp)
add_executable(No74 No74.cpp)
add_executable(No75 No75.cpp)
add_executable(No76 No76.cpp)
add_executable(No77 No77.cpp)
add_executable(No78 No78.cpp)

add_executable(No79 No79.cpp)
add_executable(No80 No80.cpp)
add_executable(No81 No81.cpp)

add_executable(No82 No82.cpp)
add_executable(No83 No83.cpp)
add_executable(No84 No84.cpp)
add_executable(No85 No85.cpp)
add_executable(No86 No86.cpp)
add_executable(No88 No88.cpp)

add_executable(No89 No89.cpp)
add_executable(No90 No90.cpp)
add_executable(No92 No92.cpp)
add_executable(No93 No93.cpp)
add_executable(No94 No94.cpp)
add_executable(No95 No95.cpp)
add_executable(No96 No96.cpp)
add_executable(No97 No97.cpp)
add_executable(No98 No98.cpp simple_node.h)
add_executable(No99 No99.cpp complex_node.h)
add_executable(No100 No100.cpp complex_node.h)

add_executable(No101 No101.cpp)
add_executable(No102 No102.cpp)
add_executable(No103 No103.cpp)
add_executable(No104 No104.cpp)
add_executable(No105 No105.cpp)
add_executable(No106 No106.cpp)
add_executable(No107 No107.cpp)
add_executable(No108 No108.cpp)
add_executable(No109 No109.cpp)
add_executable(No110 No110.cpp)
add_executable(No111 No111.cpp)
add_executable(No112 No112.cpp)

add_executable(No113 No113.cpp)
add_executable(No114 No114.cpp)
add_executable(No115 No115.cpp)
add_executable(No116 No116.cpp)
add_executable(No117 No117.cpp)
add_executable(No118 No118.cpp)
add_executable(No119 No119.cpp)
add_executable(No120 No120.cpp)

add_executable(No121 No121.cpp)
add_executable(No122 No122.cpp)
add_executable(No123 No123.cpp)
add_executable(No124 No124.cpp)
add_executable(No125 No125.cpp)

add_executable(No126 No126.cpp)
add_executable(No127 No127.cpp)
add_executable(No128 No128.cpp)
add_executable(No129 No129.cpp)
add_executable(No130 No130.cpp)
add_executable(No131 No131.cpp)

add_executable(No132 No132.cpp)
add_executable(No133 No133.cpp)
add_executable(No134 No134.cpp)
add_executable(No135 No135.cpp)
add_executable(No136 No136.cpp)

add_executable(No137 No137.cpp)
add_executable(No138 No138.cpp)
add_executable(No139 No139.cpp)
add_executable(No140 No140.cpp)
add_executable(No141 No141.cpp)
add_executable(No142 No142.cpp)

add_executable(No143 No143.cpp)
add_executable(No144 No144.cpp)
add_executable(No145 No145.cpp)
add_executable(No146 No146.cpp)
add_executable(No147 No147.cpp)
add_executable(No148 No148.cpp)
add_executable(No149 No149.cpp)
add_executable(No150 No150.cpp)

add_executable(No151 No151.cpp)
add_executable(No152 No152.cpp)
add_executable(No153 No153.cpp)
add_executable(No154 No154.cpp)
add_executable(No155 No155.cpp)
add_executable(No156 No156.cpp)
add_executable(No157 No157.cpp)
add_executable(No158 No158.cpp)
add_executable(No159 No159.cpp)
add_executable(No160 No160.cpp)

add_executable(No162 No162.cpp)
add_executable(No164 No164.cpp)
add_executable(No166 No166.cpp)
add_executable(No167 No167.cpp)
add_executable(No168 No168.cpp)
add_executable(No169 No169.cpp)

add_executable(No171 No171.cpp)
add_executable(No172 No172.cpp)
add_executable(No173 No173.cpp)
add_executable(No174 No174.cpp)
add_executable(No179 No179.cpp)
add_executable(No187 No187.cpp)

add_executable(No188 No188.cpp)
add_executable(No189 No189.cpp)
add_executable(No190 No190.cpp)

add_executable(No191 No191.cpp)
add_executable(No198 No198.cpp)
add_executable(No199 No199.cpp)
add_executable(No200 No200.cpp)
add_executable(No201 No201.cpp)
add_executable(No202 No202.cpp)
add_executable(No203 No203.cpp)
add_executable(No204 No204.cpp)
add_executable(No205 No205.cpp)
add_executable(No206 No206.cpp)

add_executable(No207 No207.cpp)
add_executable(No208 No208.cpp)
add_executable(No209 No209.cpp)
add_executable(No210 No210.cpp)
add_executable(No211 No211.cpp)
add_executable(No213 No213.cpp)
add_executable(No214 No214.cpp)
add_executable(No215 No215.cpp)
add_executable(No216 No216.cpp)
add_executable(No217 No217.cpp)

add_executable(No218 No218.cpp)
add_executable(No219 No219.cpp)
add_executable(No220 No220.cpp)
add_executable(No221 No221.cpp)
add_executable(No222 No222.cpp)
add_executable(No223 No223.cpp)
add_executable(No224 No224.cpp)
add_executable(No225 No225.cpp)
add_executable(No226 No226.cpp)
add_executable(No227 No227.cpp)
add_executable(No228 No228.cpp libs.h)

add_executable(biweekly-contest-33-No1 biweekly-contest-33/No1.cpp)
add_executable(biweekly-contest-33-No2 biweekly-contest-33/No2.cpp)
add_executable(biweekly-contest-33-No3 biweekly-contest-33/No3.cpp)
add_executable(biweekly-contest-33-No4 biweekly-contest-33/No4.cpp)

add_executable(No229 No229.cpp)
add_executable(No230 No230.cpp)
add_executable(No231 No231.cpp)
add_executable(No232 No232.cpp)
add_executable(No233 No233.cpp)
add_executable(No234 No234.cpp)
add_executable(No235 No235.cpp)
add_executable(weekly-contest-203-No1 weekly-contest-203/No1.cpp)
add_executable(No236 No236.cpp)
add_executable(No237 No237.cpp)
add_executable(No238 No238.cpp)
add_executable(No239 No239.cpp)
add_executable(No240 No240.cpp)

add_executable(No241 No241.cpp)
add_executable(No242 No242.cpp)
add_executable(No257 No257.cpp)
add_executable(No258 No258.cpp)
add_executable(No260 No260.cpp)
add_executable(No263 No263.cpp)
add_executable(No264 No264.cpp)
add_executable(No268 No268.cpp)
add_executable(No274 No274.cpp)
add_executable(No275 No275.cpp)

add_executable(No278 No278.cpp)
add_executable(No279 No279.cpp)
add_executable(No283 No283.cpp)
add_executable(No284 No284.cpp)
add_executable(No287 No287.cpp)
add_executable(No289 No289.cpp)
add_executable(No290 No290.cpp)
add_executable(No292 No292.cpp)
add_executable(No295 No295.cpp)
add_executable(No297 No297.cpp)
add_executable(No299 No299.cpp)
add_executable(No300 No300.cpp)

add_executable(No303 No303.cpp)
add_executable(No304 No304.cpp)
add_executable(No307 No307.cpp)
add_executable(No309 No309.cpp)

add_executable(No310 No310.cpp)
add_executable(No312 No312.cpp)
add_executable(No313 No313.cpp)
add_executable(No316 No316.cpp)
add_executable(No318 No318.cpp)
add_executable(No319 No319.cpp)
add_executable(No321 No321.cpp)
add_executable(No322 No322.cpp)
add_executable(No324 No324.cpp)
add_executable(No326 No326.cpp)

add_executable(No328 No328.cpp)
add_executable(No329 No329.cpp)
add_executable(No330 No330.cpp)
add_executable(No331 No331.cpp)
add_executable(No332 No332.cpp)
add_executable(No334 No334.cpp)
add_executable(No335 No335.cpp)
add_executable(No337 No337.cpp)
add_executable(No338 No338.cpp)
add_executable(No341 No341.cpp)

add_executable(No342 No342.cpp)
add_executable(No343 No343.cpp)
add_executable(No344 No344.cpp)
add_executable(No345 No345.cpp)
add_executable(No347 No347.cpp)
add_executable(No349 No349.cpp)
add_executable(No350 No350.cpp)
add_executable(No354 No354.cpp)

add_executable(weekly-contest-204-No1 weekly-contest-204/No1.cpp)
add_executable(weekly-contest-204-No2 weekly-contest-204/No2.cpp)

add_executable(No355 No355.cpp)
add_executable(No357 No357.cpp)
add_executable(No367 No367.cpp)
add_executable(No368 No368.cpp)
add_executable(No371 No371.cpp)
add_executable(No372 No372.cpp)
add_executable(No374 No374.cpp)
add_executable(No375 No375.cpp)

add_executable(No376 No376.cpp)
add_executable(No377 No377.cpp)
add_executable(No378 No378.cpp)

add_executable(No380 No380.cpp)
add_executable(No381 No381.cpp)
add_executable(No382 No382.cpp)

add_executable(No383 No383.cpp)
add_executable(No384 No384.cpp)
add_executable(No385 No385.cpp)

add_executable(No386 No386.cpp)
add_executable(No387 No387.cpp)
add_executable(No389 No389.cpp)

add_executable(No390 No390.cpp)
add_executable(No391 No391.cpp)
add_executable(No392 No392.cpp)

add_executable(No393 No393.cpp)
add_executable(No394 No394.cpp)
add_executable(No395 No395.cpp)

add_executable(No396 No396.cpp)
add_executable(lccup20-No1 lccup20/No1.cpp)
add_executable(lccup20-No2 lccup20/No2.cpp)
add_executable(lccup20-No3 lccup20/No3.cpp)

add_executable(No397 No397.cpp)
add_executable(No398 No398.cpp)
add_executable(No400 No400.cpp)
add_executable(weekly-contest-206-No1 weekly-contest-206/No1.cpp)

add_executable(No401 No401.cpp)
add_executable(No402 No402.cpp)
add_executable(No403 No403.cpp)
add_executable(No404 No404.cpp)

add_executable(No405 No405.cpp)
add_executable(No406 No406.cpp)
add_executable(No409 No409.cpp)

add_executable(No412 No412.cpp)
add_executable(No413 No413.cpp)
add_executable(No414 No414.cpp)

add_executable(No415 No415.cpp)
add_executable(No416 No416.cpp)
add_executable(No419 No419.cpp)

add_executable(No421 No421.cpp)
add_executable(No423 No423.cpp)
add_executable(No424 No424.cpp)

add_executable(No429 No429.cpp)
add_executable(2020-fall-No1 2020-fall/No1.cpp)
add_executable(No430 No430.cpp)
add_executable(No433 No433.cpp)
add_executable(biweekly-contest-35-No1 biweekly-contest-35/No1.cpp)
add_executable(weekly-contest-207-No1 weekly-contest-207/No1.cpp)
add_executable(No434 No434.cpp)
add_executable(No435 No435.cpp)
add_executable(No437 No437.cpp)

add_executable(No438 No438.cpp)
add_executable(No440 No440.cpp)
add_executable(No441 No441.cpp)

add_executable(No442 No442.cpp)
add_executable(No443 No443.cpp)
add_executable(No445 No445.cpp)

add_executable(No446 No446.cpp)
add_executable(No447 No447.cpp)
add_executable(No448 No448.cpp)

add_executable(No449 No449.cpp)
add_executable(No450 No450.cpp)
add_executable(No451 No451.cpp)

add_executable(No452 No452.cpp)
add_executable(No453 NO453.cpp)
add_executable(No454 No454.cpp)

add_executable(No455 No455.cpp)
add_executable(No456 No456.cpp)
add_executable(No457 No457.cpp)

add_executable(No458 No458.cpp)
add_executable(No459 No459.cpp)
add_executable(No461 No461.cpp)
add_executable(No462 No462.cpp)

add_executable(No463 No463.cpp)
add_executable(No464 No464.cpp)
add_executable(No467 No467.cpp)
add_executable(No470 No470.cpp)

add_executable(No473 No473.cpp)
add_executable(No474 No474.cpp)
add_executable(No475 No475.cpp)

add_executable(No476 No476.cpp)
add_executable(No477 No477.cpp)
add_executable(No478 No478.cpp)

add_executable(No479 No479.cpp)
add_executable(No482 No482.cpp)
add_executable(No485 No485.cpp)

add_executable(No486 No486.cpp)
add_executable(No491 No491.cpp)
add_executable(No492 No492.cpp)
add_executable(No494 No494.cpp)
add_executable(No495 No495.cpp)

add_executable(No496 No496.cpp)
add_executable(No497 No497.cpp)
add_executable(No498 No498.cpp)

add_executable(biweekly-contest-36-No1 biweekly-contest-36/No1.cpp)
add_executable(weekly-contest-209-No1 weekly-contest-209/No1.cpp)
add_executable(weekly-contest-209-No2 weekly-contest-209/No2.cpp)